<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/ma_tvListaPersonas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"

        android:text="@string/lista_personas"
        android:textColor="@color/blanco_1"
        android:textSize="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ma_btnCantpersonas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"

        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/btn_bkg_oscuro"
        android:text="@string/cant_personas_0"

        android:onClick="btn_setCantidadPersonas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ma_tvListaPersonas" />

    <Button
        android:id="@+id/ma_btnNewpersona"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/btn_bkg_oscuro"
        android:text="@string/nueva_persona"

        android:onClick="btn_nuevaPersona"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ma_btnCantpersonas" />

    <ScrollView
        android:id="@+id/ma_svContenedor"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="5dp"
        android:layout_marginTop="170dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="70dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:background="@drawable/backgroud_claro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/ma_llContenedor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <Button
        android:id="@+id/ma_btnCalcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/btn_bkg_oscuro"
        android:text="@string/calcular"

        android:onClick="btn_calcular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ma_svContenedor" />

    <!--    flotantes-->

    <LinearLayout
        android:id="@+id/ma_cp_llCantidadPersonas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:background="@drawable/btn_bkg_oscuro"
        android:orientation="vertical"
        android:elevation="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/ma_cp_etCantidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:ems="10"
            android:inputType="number"
            android:textAlignment="center"
            android:hint="@string/cant_personas"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:orientation="horizontal">

            <Button
                android:id="@+id/ma_cp_btnCancelar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/btn_bkg_oscuro"
                android:layout_weight="1"
                android:text="@string/cancerlar"

                android:onClick="btn_cp_cancelar"/>

            <Button
                android:id="@+id/ma_cp_btnAceptar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/btn_bkg_oscuro"
                android:layout_weight="1"
                android:text="@string/aceptar"

                android:onClick="btn_cp_aceptar"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ma_np_llAgregarpsersona"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:background="@drawable/btn_bkg_oscuro"
        android:orientation="vertical"
        android:elevation="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/ma_np_etNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:hint="@string/nombre" />

        <EditText
            android:id="@+id/ma_np_etPlata"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            android:hint="@string/cant_plata"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:orientation="horizontal">

            <Button
                android:id="@+id/ma_np_btnCancelar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/btn_bkg_oscuro"
                android:layout_weight="1"
                android:text="@string/cancerlar"

                android:onClick="btn_np_cancelar"/>

            <Button
                android:id="@+id/ma_np_btnAceptar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/btn_bkg_oscuro"
                android:layout_weight="1"
                android:text="@string/aceptar"

                android:onClick="btn_np_aceptar"/>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>